[gd_scene load_steps=6 format=3 uid="uid://boseqmxbwtogy"]

[ext_resource type="PackedScene" uid="uid://brceldhrfa7ts" path="res://game_view/game_area.tscn" id="1"]
[ext_resource type="Script" uid="uid://djokh2opxsbh3" path="res://game_view/base_editor/base_editor.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://b7c1ux4ujb2sm" path="res://ui/unit_bar.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://iq85nxbw2vy1" path="res://game_view/map.tscn" id="4"]

[sub_resource type="StyleBoxFlat" id="400"]
bg_color = Color(0.262745, 0.262745, 0.262745, 0.443137)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="BaseEditor" type="Node3D"]
script = ExtResource("2")

[node name="Map" parent="." instance=ExtResource("4")]

[node name="GameArea" parent="." instance=ExtResource("1")]

[node name="BuildingBar" parent="." instance=ExtResource("3")]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -120.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_styles/panel = SubResource("400")

[connection signal="position_clicked" from="GameArea" to="." method="_on_GameArea_position_clicked"]
[connection signal="position_mouseover" from="GameArea" to="." method="_on_game_area_position_mouseover"]
